completed the basic admin workflow of on boarding a customer and establishing the home to owner relationship

--- a/views/partials/homes/_new.html
+++ b/views/partials/homes/_new.html
@@ -1,1 +1,45 @@
-hi
+<h1>Add New Home</h1>
+
+<div class="container-fluid">
+    <div class="row">
+        <form role="form" ng-submit="create()">
+            <div class="col-xs-6">
+                <div class="well well-sm"></div>
+                <div class="form-group">
+                    <label for="Address">Address</label>
+                    <div class="input-group">
+                        <input ng-model="home.address"class="form-control" name="Address" id="Address"  required="" type="text">
+                        <span class="input-group-addon"><span class="glyphicon glyphicon-asterisk"></span></span>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="price">Price</label>
+                    <div class="input-group">
+                        <input ng-model="home.price" class="form-control" name="price" id="price" required="" type="number">
+                        <span class="input-group-addon"><span class="glyphicon glyphicon-asterisk"></span></span>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="builder">Builder</label>
+                    <div class="input-group">
+                        <input ng-model="home.builder"class="form-control" id="builderFirst" name="builder" >
+                        <span class="input-group-addon"><span class="glyphicon glyphicon-asterisk"></span></span>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="floorplan">Floor Plan</label>
+                    <select ng-model="home.floorplan"name="dropdown">
+                        <option value = "{{floorplan.id}}"ng-repeat = "floorplan in floorplans">{{floorplan.elevation}}</option>
+                        
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="ECD">Completion Date</label>
+                    <input ng-model="home.ECD"class="form-control" id="completion-date" name="compleetion-date" type="date">
+                        <span class="input-group-addon"><span class="glyphicon glyphicon-asterisk"></span></span>
+                </div>
+                <input name="submit" id="submit" value="Submit" class="btn btn-info pull-right" type="submit">
+            </div>
+        </form>
+    </div>
+</div>
