--- a/views/partials/index/_landing.html
+++ b/views/partials/index/_landing.html
@@ -1,8 +1,10 @@
-<h1>Add New Customer</h1>
+
 <div class="container-fluid">
     <div class="row">
+        <div class="col-xs-6">
+            <h1>Add New Customer</h1>
         <form role="form" ng-submit="create()">
-            <div class="col-xs-6">
+            
                 <div class="well well-sm"></div>
                 <div class="form-group">
                     <label for="InputfName">First Name</label>
@@ -34,7 +36,30 @@
                     </select>
                 </div>
                 <input name="submit" id="submit" value="Submit" class="btn btn-info pull-right" type="submit">
-            </div>
+            
         </form>
+        </div>
+        
+        <div class="col-xs-6 container">
+            <h2>Homes</h2>
+  <table class="table table-striped">
+    <thead>
+      <tr>
+        <th>Address</th>
+        <th>Price</th>
+        <th>Edit/Delete</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr ng-repeat = "home in homes">
+        <td>{{home.address}}</td>
+        <td>{{home.price}}</td>
+        <td><a ng-href = "#/homes/edit/{{home.id}}"<button type="button" class="btn btn-primary">EDIT</button></a> / <a ng-href = "#/homes/delete/{{home.id}}"></a><button type="button" class="btn btn-danger">DELETE</button></a></td>
+      </tr>
+     
+    </tbody>
+  </table>
+</div>
+
     </div>
 </div>
