editing of floorplans and editing homes no in place

--- a/views/partials/homes/_edit.html
+++ b/views/partials/homes/_edit.html
@@ -34,7 +34,7 @@
                 <div class = "form-group">
                   <label for="img">Home Main Image</label>
                   <input type="file" onchange="previewFile()"><br>
-                  <img src="" height="200" alt="Image preview...">
+                  <img src="" height="200" width = "400" alt="Image preview...">
                 </div>
                 
                 
