--- a/views/partials/homes/_new.html
+++ b/views/partials/homes/_new.html
@@ -27,8 +27,8 @@
                 </div>
                 <div class="form-group">
                     <label for="floorplan">Floor Plan</label>
-                    <select ng-model="home.floorplan"name="dropdown">
-                        <option value = "{{floorplan.id}}"ng-repeat = "floorplan in floorplans">{{floorplan.elevation}}</option>
+                    <select ng-model="home.floorplanId"name="dropdown">
+                        <option value = "{{floorplan.id}}"ng-repeat = "floorplan in floorplans">{{floorplan.name}}</option>
                         
                     </select>
                 </div>
