--- a/views/partials/index/_landing.html
+++ b/views/partials/index/_landing.html
@@ -1,7 +1,8 @@
 
 <div class="container-fluid">
     <div class="row">
-        <div class="col-xs-6">
+        <div class = "col-xs-2"></div>
+        <div class="col-md-4 col-xs-12" >
             <h1>Add New Customer</h1>
         <form role="form" ng-submit="create()">
             
@@ -39,8 +40,9 @@
             
         </form>
         </div>
+        <div class = "col-xs-2"></div>
         
-        <div class="col-xs-6 container">
+        <div class="col-md-4 col-xs-12 container">
             <h2>Homes</h2>
   <table class="table table-striped">
     <thead>
@@ -61,5 +63,26 @@
   </table>
 </div>
 
+    </div>
+    <div class = "row">
+        <div class = "container-fluid">
+            <div class = "col-xs-12" style="border: 2px solid black">
+                <div><h1>Floorplans</h1><a ng-href = "#/floorplans/new">New Floorplan</a></div>
+                
+                <div ng-repeat = "floorplan in floorplans" class="col-md-2">
+                  <div class="container-fluid">
+                   <div class="text-vertical-center">
+                    <h3>{{floorplan.name}}</h3>
+                    <img height = "100" width = "100" class="img-responsive" src= {{floorplan.img}} alt="">
+                    <p>Starts at: {{floorplan.basePrice}}</p>
+                    <p>Square Feet: {{floorplan.sqft}}</p>
+                    <p>Bedrooms: {{floorplan.bedAmt}}</p>
+                    <p>Bathrooms: {{floorplan.bathAmt}}</p>
+                    <a ng-href = "#/floorplans/edit/{{floorplan.id}}">Edit Floorplan</a>
+                   </div>
+                  </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
