--- a/views/partials/homes/_edit.html
+++ b/views/partials/homes/_edit.html
@@ -1,14 +1,35 @@
 
-<h1>Edit {{home.address}}</h1>
+<h1>Edit {{home.address.streetAddress}}</h1>
 <div class="container-fluid">
     <div class="row">
         <form role="form" ng-submit="create()">
             <div class="col-xs-6">
                 <div class="well well-sm"></div>
                 <div class="form-group">
-                    <label for="Address">Address</label>
+                    <label for="Address">Street Address</label>
                     <div class="input-group">
-                        <input value = "{{home.address}}"ng-model="home.address"class="form-control" name="Address" id="Address"  required="" type="text">
+                        <input value = "{{home.address.streetAddress}}"ng-model="home.address.streetAddress"class="form-control" name="Address" id="Address"  required="" type="text">
+                        <span class="input-group-addon"><span class="glyphicon glyphicon-asterisk"></span></span>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="City">City</label>
+                    <div class="input-group">
+                        <input value = "{{home.address.city}}"ng-model="home.address.city"class="form-control" name="Address" id="Address"  required="" type="text">
+                        <span class="input-group-addon"><span class="glyphicon glyphicon-asterisk"></span></span>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="State">State</label>
+                    <div class="input-group">
+                        <input value = "{{home.address.state}}"ng-model="home.address.state"class="form-control" name="Address" id="Address"  required="" type="text">
+                        <span class="input-group-addon"><span class="glyphicon glyphicon-asterisk"></span></span>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="Zip">Zip Code</label>
+                    <div class="input-group">
+                        <input value = "{{home.address.zip}}"ng-model="home.address.zip"class="form-control" name="Address" id="Address"  required="" type="text">
                         <span class="input-group-addon"><span class="glyphicon glyphicon-asterisk"></span></span>
                     </div>
                 </div>
