--- a/views/partials/index/_landing.html
+++ b/views/partials/index/_landing.html
@@ -32,7 +32,7 @@
                     <label for="InputEmail">Select Home</label>
                     <select ng-model="user.homeId"name="dropdown">
                         <option value = "new" selected>New Home</option>
-                        <option value = "{{home.id}}"ng-repeat = "home in homes">{{home.address}}</option>
+                        <option value = "{{home.id}}"ng-repeat = "home in homes">{{home.address.streetAddress}}</option>
                         
                     </select>
                 </div>
@@ -54,9 +54,9 @@
     </thead>
     <tbody>
       <tr ng-repeat = "home in homes">
-        <td>{{home.address}}</td>
+        <td>{{home.address.streetAddress}}</td>
         <td>{{home.price}}</td>
-        <td><a ng-href = "#/homes/edit/{{home.id}}"<button type="button" class="btn btn-primary">EDIT</button></a> / <a ng-href = "#/homes/delete/{{home.id}}"></a><button type="button" class="btn btn-danger">DELETE</button></a></td>
+        <td><a ng-href = "#/homes/edit/{{home.id}}"<button type="button" class="btn btn-primary">EDIT</button></a> / <button type="button" id="delete_button" class="btn btn-danger">DELETE</button></td>
       </tr>
      
     </tbody>
@@ -68,8 +68,7 @@
         <div class = "container-fluid">
             <div class = "col-xs-12" style="border: 2px solid black">
                 <div><h1>Floorplans</h1><a ng-href = "#/floorplans/new">New Floorplan</a></div>
-                
-                <div ng-repeat = "floorplan in floorplans" class="col-md-2">
+                <div ng-repeat = "floorplan in floorplans" class="col-md-2 col-xs-6">
                   <div class="container-fluid">
                    <div class="text-vertical-center">
                     <h3>{{floorplan.name}}</h3>
