--- a/views/partials/index/_landing.html
+++ b/views/partials/index/_landing.html
@@ -1,5 +1,9 @@
+<!-- Trigger the modal with a button -->
 
-<div class="container-fluid">
+
+<!-- Modal -->
+
+
     <div class="row">
         <div class = "col-xs-2"></div>
         <div class="col-md-4 col-xs-12" >
@@ -56,7 +60,28 @@
       <tr ng-repeat = "home in homes">
         <td>{{home.address.streetAddress}}</td>
         <td>{{home.price}}</td>
-        <td><a ng-href = "#/homes/edit/{{home.id}}"<button type="button" class="btn btn-primary">EDIT</button></a> / <button type="button" id="delete_button" class="btn btn-danger">DELETE</button></td>
+        <td><a ng-href = "#/homes/edit/{{home.id}}"<button type="button" class="btn btn-primary">EDIT</button></a> / 
+        <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#{{home.id}}">DELETE</button>
+        <div id="{{home.id}}" class="modal fade" role="dialog">
+          <div class="modal-dialog">
+
+          <!-- Modal content-->
+            <div class="modal-content">
+              <div class="modal-header">
+               <button type="button" class="close" data-dismiss="modal">&times;</button>
+               <h4 class="modal-title">{{home.address.streetAddress}}</h4>
+              </div>
+            <div class="modal-body">
+            <p>Are you sure you want to delete {{home.address.streetAddress}}</p>
+            </div>
+            <div class="modal-footer">
+            <a ng-href = "" ng-click = deleteHome(home.id)><button type="button" class="btn btn-danger" data-dismiss="modal" >DELETE</button></a>
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+             </div>
+            </div>
+
+            </div>
+           </div>
       </tr>
      
     </tbody>
@@ -85,3 +110,4 @@
         </div>
     </div>
 </div>
+
