--- a/views/partials/index/_landing.html
+++ b/views/partials/index/_landing.html
@@ -5,7 +5,7 @@
 
 
     <div class="row">
-        <div class = "col-xs-2"></div>
+        
         <div class="col-md-4 col-xs-12" >
             <h1>Add New Customer</h1>
         <form role="form" ng-submit="create()">
@@ -44,9 +44,7 @@
             
         </form>
         </div>
-        <div class = "col-xs-2"></div>
-        
-        <div class="col-md-4 col-xs-12 container">
+        <div class="col-md-4 col-xs-12">
             <h2>Homes</h2>
   <table class="table table-striped">
     <thead>
@@ -87,6 +85,50 @@
     </tbody>
   </table>
 </div>
+
+ <div class="col-md-4 col-xs-12">
+            <h2>Users</h2>
+  <table class="table table-striped">
+    <thead>
+      <tr>
+        <th>Email Address</th>
+        <th>Home</th>
+        <th>Edit/Delete</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr ng-repeat = "user in users">
+        <td>{{user.emailAddress}}</td>
+        <td>{{user.home.address.streetAddress}}</td>
+        <td><a ng-href = "#/users/edit/{{user.id}}"<button type="button" class="btn btn-primary">EDIT</button></a> / 
+        <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#{{user.id}}">DELETE</button>
+        <div id="{{user.id}}" class="modal fade" role="dialog">
+          <div class="modal-dialog">
+
+          <!-- Modal content-->
+            <div class="modal-content">
+              <div class="modal-header">
+               <button type="button" class="close" data-dismiss="modal">&times;</button>
+               <h4 class="modal-title">{{user.firstName}} {{user.lastName}}</h4>
+              </div>
+            <div class="modal-body">
+            <p>Are you sure you want to delete {{user.emailAddress}}</p>
+            </div>
+            <div class="modal-footer">
+            <a ng-href = "" ng-click = deleteUser(user.id)><button type="button" class="btn btn-danger" data-dismiss="modal" >DELETE</button></a>
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+             </div>
+            </div>
+
+            </div>
+           </div>
+      </tr>
+     
+    </tbody>
+  </table>
+</div>
+
+
 
     </div>
     <div class = "row">
