--- a/views/partials/floorplans/_new.html
+++ b/views/partials/floorplans/_new.html
@@ -1,7 +1,7 @@
-<h1>Edit Floor Plan: {{floorplan.name}}</h1>
+<h1>New Floor Plan: {{floorplan.name}}</h1>
 <div class="container-fluid">
     <div class="row">
-        <form role="form" ng-submit="save()">
+        <form role="form" ng-submit="create()">
             <div class="col-xs-6">
                 <div class="well well-sm"></div>
                 <div class="form-group">
@@ -36,11 +36,7 @@
                         <span class="input-group-addon"><span class="glyphicon glyphicon-asterisk"></span></span>
                 </div>
                 
-                <div class = "form-group">
-                  <label for="img">Floorplan Image</label>
-                  <input type="file" onchange="FPpreviewFile()"><br>
-                  <img src= {{floorplan.img}} height="200" alt="Image preview...">
-                </div>  
+                 
                 
                 <input name="submit" id="submit" value="Submit" class="btn btn-info pull-right" type="submit">
                  </div>
